--- a/SyncDateTime/SyncDateTime.csproj
+++ b/SyncDateTime/SyncDateTime.csproj
@@ -85,7 +85,7 @@
     </ApplicationDefinition>
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="Messages\SelectFolderMessage.cs" />
-    <Compile Include="Model\DataItem.cs" />
+    <Compile Include="Model\BaseSyncProcess.cs" />
     <Compile Include="Model\DataService.cs" />
     <Compile Include="Model\IDataService.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
