--- a/app.config
+++ b/app.config
@@ -13,6 +13,12 @@
             <setting name="TargetFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="CreatedDateTime" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ModifiedDateTime" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SyncDateTime.Properties.Settings>
     </userSettings>
 </configuration>
